1. utf8 魔法值 2. 更新behappy-redis版本